<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/backgroundcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScreenLight"
     >
	 <Button
           android:id="@+id/button1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_alignParentBottom="true"
           android:text="@string/exit" />
<SlidingDrawer 
        android:id="@+id/slidingdrawer" 
        android:layout_width="match_parent" 
        android:layout_height="250dip" 
        android:content="@+id/content" 
        android:handle="@+id/handle"
        android:layout_alignParentBottom="true" 
        android:orientation="vertical" > 
        <ImageView 
            android:id="@id/handle" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/ic_launcher" > 
        </ImageView> 
        <RelativeLayout 
            android:id="@id/content" 
            android:layout_width="match_parent" 
            android:layout_height="match_parent" 
            android:background="#AAAAAA"> 
            
    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/red"
        android:onClick="redScreen"
         />

       <Button
           android:id="@+id/orange"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/red"
           android:layout_toRightOf="@+id/red"
           android:text="@string/orange"
           android:onClick="orangeScreen" />

       <Button
           android:id="@+id/yellow"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/orange"
           android:layout_toRightOf="@+id/orange"
           android:text="@string/yellow"
           android:onClick="yellowScreen" />

       <Button
           android:id="@+id/green"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/yellow"
           android:layout_toRightOf="@+id/yellow"
           android:text="@string/green"
           android:onClick="greenScreen"  />

       <Button
           android:id="@+id/blue"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/green"
           android:layout_toRightOf="@+id/green"
           android:text="@string/blue"
           android:onClick="blueScreen" />

       <Button
           android:id="@+id/cyan"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/red"
           android:layout_below="@+id/red"
           android:text="@string/cyan"
           android:onClick="cyanScreen"  />

       <Button
           android:id="@+id/purple"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/cyan"
           android:layout_toRightOf="@+id/cyan"
           android:text="@string/purple"
           android:onClick="purpleScreen" 
            />
        <Button
           android:id="@+id/white"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/purple"
           android:layout_toRightOf="@+id/purple"
           android:text="@string/white"
           android:onClick="whiteScreen"  />

       <Button
           android:id="@+id/black"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/white"
           android:layout_toRightOf="@+id/white"
           android:text="@string/black"
           android:onClick="blackScreen" 
            />
        </RelativeLayout> 
    </SlidingDrawer> 
</RelativeLayout>
